[gd_scene load_steps=2 format=3 uid="uid://c0f0g76n06rgw"]

[ext_resource type="Script" uid="uid://uncd5bwiou62" path="res://Scripts/death_system.gd" id="1_q461g"]

[node name="DeathSystem" type="Node2D"]
script = ExtResource("1_q461g")

[node name="Death_Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
ignore_time_scale = true

[connection signal="timeout" from="Death_Timer" to="." method="_on_death_timer_timeout"]
